--- a/faust_avro_model_codegen/templates/faust_record.jinja2
+++ b/faust_avro_model_codegen/templates/faust_record.jinja2
@@ -1,7 +1,10 @@
 import typing, enum, dataclasses, datetime
 
 from dataclasses import dataclass, field
-from dataclasses_avroschema.avrodantic import CT
+try:
+    from dataclasses_avroschema.avrodantic import CT
+except ModuleNotFoundError:
+    from dataclasses_avroschema.schema_generator import CT
 from dataclasses_avroschema.faust import AvroRecord
 
 
